extend utilities